WIP: resume analysis

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-unicorn: var(--unicorn);
 }
 
 :root {
@@ -111,6 +112,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --unicorn: oklch(70.4% 0.14 182.503);
 }
 
 .dark {
@@ -145,6 +147,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  --unicorn: oklch(70.4% 0.14 182.503);
 }
 
 @layer base {
